fix: menu on mobile; thankyou image

--- a/assets/css/meanmenu.css
+++ b/assets/css/meanmenu.css
@@ -27,7 +27,7 @@ a.meanmenu-reveal {
   height: 22px;
   padding: 10px 12px;
   position: absolute;
-  top: 0;
+  top: 5px;
   right: 0;
   cursor: pointer;
   color: #444;
